# autotest-for-oskernel

./: 740off.sh  740on.sh  Makefile  README.md  board_operate.py  cancel_purge  config.json  control.py  debugger.py  dhcp.conf  ktool.py  ltp-result.txt  remote_switch.py  runrun.sh  ssh_run_2023.py  ssh_run_k210.py  ssh_run_unmatched.py  test.py  test_relay.py  初赛修改内容  大赛提交说明.md  操作系统大赛提交说明.MD
docker/: Dockerfile  dependencies.toml  说明.md
docker/2023/: Dockerfile  Makefile
docker/oscomp-dependencies-alternative/: Cargo.toml
docker/oscomp-dependencies-latest/: Cargo.toml
docker/oscomp-dependencies-old/: Cargo.toml
gitlab/: 统计依赖.py
kernel/: __main__.py  comment.html  comment.html.orig  exception.py  net_relay.py  note.md  os_serial_out_rv.txt  parse_output_2023.py  postwork.py  prework.py  render.py  run.py  run_ori.py  run_qemu.py  scene_output.py  sdcardwork.py  test.html  test_template.py  utils.py  verdict.py
kernel/baselines/: baseline_output.py  cyclictest_baseline.py  iozone_baseline.py  iperf_baseline.py  libcbench_baseline.py  libctest_baseline.py  netperf_baseline.py  unixbench_baseline.py
kernel/cg_learning/: README.md  models.py  tracker.py  utils.py
kernel/judge/: config.json  judge_basic-glibc.py  judge_basic-musl.py  judge_cyclictest-musl.py  judge_iperf-musl.py  judge_libcbench-glibc.py  judge_libctest-glibc.py  judge_lmbench-glibc.py  judge_lmbench-musl.py  judge_ltp-glibc.py  judge_ltp-musl-zzy.py  judge_ltp-musl-zzy.py~  judge_ltp-musl.py  judge_netperf-glibc.py  output.txt
kernel/pygrading/: html.py  job.py  job_base.py  render.py
kernel/templates/: comment.html  download.html  general.html  logs.html  table.html
test/: busybox_cmd.txt  luas.txt  stdout.txt  test_popen.py  test_re.py
test/a+b/submit/: main.c
test/rCore-Tutorial/submit/: Makefile  README.md  k210_compile_out.txt  k210_flash_out.txt  k210_serial_out.txt  sdcard_flash.txt  sdcard_write.txt
test/sdk_test/submit/: Makefile  k210_compile_out.txt  k210_flash_out.txt  k210_serial_out.txt
test/xv6-k210/submit/: Makefile  k210_compile_out.txt  k210_flash_out.txt  sdcard_flash.txt
test_data/: config.json
test_scripts/: output.txt  test1_test.py  test2_test.py  test3_test.py  test4_test.py  test5_test.py  test6_test.py  test7_test.py  test_runner.py
toolchain-image-scripts/: Dockerfile  README.md
tools/: socat.py
(+35 files in other folders)
