[package]
name = "oscomp-dependencies-latest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
bare-metal = "1.0.0"
bit_field = "0.10.1"
bitflags = "1.3.2"
buddy_system_allocator = "0.8"
byteorder = "1.4.3"
cfg-if = "1.0.0"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
# core_io = "0.1" # can't build on latest nightly
criterion = "0.3.5"
criterion-macro = "0.3.4"
cstr_core = "0.2.5"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
embedded-hal = "0.2.7"
env_logger = "0.9"
fscommon = "0.1.1"
futures = "0.3"
hashbrown = "0.12.0"
heapless = "0.7.10"
intrusive-collections = "0.9.3"
k210-hal = { git = "https://github.com/wyfcyx/k210-hal", rev = "795ac3f8" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac", rev = "8f99c1ca" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc", rev = "09a0742c" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"
log = "0.4.16"
nb = "1.0.0"
qemu-exit = "3.0.1"
r0 = "1.0.0"
rand = "0.8.5"
regex = "1.5.5"
riscv = "0.7.0"
riscv-rt = "0.8.1"
riscv-target = "0.1.2"
rustsbi = "0.2.2"
spin = "0.9.2"
static_assertions = "1.1.0"
tempfile = "3.3.0"
typenum = "1.15.0"
vcell = "0.1.3"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "f30d4268" }
volatile = "0.4.4"
xmas-elf = "0.8.0"
